--- a/java/BUILD
+++ b/java/BUILD
@@ -1,6 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "DISTROS", "DISTRO_PACKAGES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load("@io_bazel_rules_docker//java:image.bzl", "java_image")
@@ -14,11 +14,11 @@ load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 
 DISTRO_VERSIONS = {
     "amd64": {
-        "_debian10": versions_amd64_debian10,
-        "_debian11": versions_amd64_debian11,
+        "debian10": versions_amd64_debian10,
+        "debian11": versions_amd64_debian11,
     },
     "arm64": {
-        "_debian11": versions_arm64_debian11,
+        "debian11": versions_arm64_debian11,
     },
 }
 
@@ -28,45 +28,45 @@ USERS = [
 ]
 
 VERSION_PAIRS = [
-    ("11", "amd64", "_debian10"),
-    ("11", "amd64", "_debian11"),
-    ("11", "arm64", "_debian11"),
-    ("17", "amd64", "_debian11"),
-    ("17", "arm64", "_debian11"),
+    ("11", "amd64", "debian10"),
+    ("11", "amd64", "debian11"),
+    ("11", "arm64", "debian11"),
+    ("17", "amd64", "debian11"),
+    ("17", "arm64", "debian11"),
 ]
 
 EXTRA_DEBS = {
-    "_debian10": [],
-    "_debian11": [
+    "debian10": [],
+    "debian11": [
         "libbrotli1",
     ],
 }
 
 [
     container_image(
-        name = "java_base" + mode + "_" + user + "_" + arch + distro_suffix,
+        name = "java_base" + mode + "_" + user + "_" + arch + "_" + distro,
         architecture = arch,
-        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + distro_suffix,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_" + user + "_" + arch + "_" + distro,
         debs = [
-            DISTRO_PACKAGES[arch][distro_suffix]["zlib1g"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libjpeg62-turbo"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libpng16-16"],
-            DISTRO_PACKAGES[arch][distro_suffix]["liblcms2-2"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libfreetype6"],
-            DISTRO_PACKAGES[arch][distro_suffix]["fonts-dejavu-core"],
-            DISTRO_PACKAGES[arch][distro_suffix]["fontconfig-config"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libexpat1"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libfontconfig1"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libuuid1"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libgraphite2-3"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libharfbuzz0b"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libglib2.0-0"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libpcre3"],
-        ] + [DISTRO_PACKAGES[arch][distro_suffix][deb] for deb in EXTRA_DEBS[distro_suffix]],
+            DISTRO_PACKAGES[arch][distro]["zlib1g"],
+            DISTRO_PACKAGES[arch][distro]["libjpeg62-turbo"],
+            DISTRO_PACKAGES[arch][distro]["libpng16-16"],
+            DISTRO_PACKAGES[arch][distro]["liblcms2-2"],
+            DISTRO_PACKAGES[arch][distro]["libfreetype6"],
+            DISTRO_PACKAGES[arch][distro]["fonts-dejavu-core"],
+            DISTRO_PACKAGES[arch][distro]["fontconfig-config"],
+            DISTRO_PACKAGES[arch][distro]["libexpat1"],
+            DISTRO_PACKAGES[arch][distro]["libfontconfig1"],
+            DISTRO_PACKAGES[arch][distro]["libuuid1"],
+            DISTRO_PACKAGES[arch][distro]["libgraphite2-3"],
+            DISTRO_PACKAGES[arch][distro]["libharfbuzz0b"],
+            DISTRO_PACKAGES[arch][distro]["libglib2.0-0"],
+            DISTRO_PACKAGES[arch][distro]["libpcre3"],
+        ] + [DISTRO_PACKAGES[arch][distro][deb] for deb in EXTRA_DEBS[distro]],
         env = {"LANG": "C.UTF-8"},
         tars = [
-            "//cacerts:cacerts_java_" + arch + distro_suffix,
-            "//locale:locale_" + arch + distro_suffix,
+            "//cacerts:cacerts_java_" + arch + "_" + distro,
+            "//locale:locale_" + arch + "_" + distro,
         ],
     )
     for mode in [
@@ -74,38 +74,38 @@ EXTRA_DEBS = {
         "_debug",
     ]
     for user in USERS
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro in DISTROS
     for arch in ARCHITECTURES
-    if not (arch == "arm64" and distro_suffix == "_debian10")
+    if not (arch == "arm64" and distro == "debian10")
 ]
 
 [
     container_image(
-        name = "java" + java_version + "_" + user + "_" + arch + distro_suffix,
+        name = "java" + java_version + "_" + user + "_" + arch + "_" + distro,
         architecture = arch,
-        base = ":java_base_" + user + "_" + arch + distro_suffix,
-        debs = [DISTRO_PACKAGES[arch][distro_suffix]["openjdk-" + java_version + "-jre-headless"]],
+        base = ":java_base_" + user + "_" + arch + "_" + distro,
+        debs = [DISTRO_PACKAGES[arch][distro]["openjdk-" + java_version + "-jre-headless"]],
         # We expect users to use:
         # cmd = ["/path/to/deploy.jar", "--option1", ...]
         entrypoint = [
             "/usr/bin/java",
             "-jar",
         ],
-        env = {"JAVA_VERSION": jre_ver(DISTRO_VERSIONS[arch][distro_suffix]["openjdk-" + java_version + "-jre-headless"])},
+        env = {"JAVA_VERSION": jre_ver(DISTRO_VERSIONS[arch][distro]["openjdk-" + java_version + "-jre-headless"])},
         symlinks = {"/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java"},
     )
-    for (java_version, arch, distro_suffix) in VERSION_PAIRS
+    for (java_version, arch, distro) in VERSION_PAIRS
     for user in USERS
 ]
 
 [
     container_image(
-        name = "java" + java_version + "_debug_" + user + "_" + arch + distro_suffix,
+        name = "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro,
         architecture = arch,
-        base = ":java_base_debug_" + user + "_" + arch + distro_suffix,
+        base = ":java_base_debug_" + user + "_" + arch + "_" + distro,
         debs = [
-            DISTRO_PACKAGES[arch][distro_suffix]["openjdk-" + java_version + "-jre-headless"],
-            DISTRO_PACKAGES[arch][distro_suffix]["openjdk-" + java_version + "-jdk-headless"],
+            DISTRO_PACKAGES[arch][distro]["openjdk-" + java_version + "-jre-headless"],
+            DISTRO_PACKAGES[arch][distro]["openjdk-" + java_version + "-jdk-headless"],
         ],
         # We expect users to use:
         # cmd = ["/path/to/deploy.jar", "--option1", ...]
@@ -113,18 +113,18 @@ EXTRA_DEBS = {
             "/usr/bin/java",
             "-jar",
         ],
-        env = {"JAVA_VERSION": jre_ver(DISTRO_VERSIONS[arch][distro_suffix]["openjdk-" + java_version + "-jre-headless"])},
+        env = {"JAVA_VERSION": jre_ver(DISTRO_VERSIONS[arch][distro]["openjdk-" + java_version + "-jre-headless"])},
         symlinks = {"/usr/bin/java": "/usr/lib/jvm/java-" + java_version + "-openjdk-" + arch + "/bin/java"},
     )
-    for (java_version, arch, distro_suffix) in VERSION_PAIRS
+    for (java_version, arch, distro) in VERSION_PAIRS
     for user in USERS
 ]
 
 [
     container_test(
-        name = "java_base" + mode + "_" + user + "_" + arch + distro_suffix + "_test",
+        name = "java_base" + mode + "_" + user + "_" + arch + "_" + distro + "_test",
         configs = ["testdata/java_base" + mode + ".yaml"],
-        image = ":java_base" + mode + "_" + user + "_" + arch + distro_suffix,
+        image = ":java_base" + mode + "_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
             "manual",
@@ -136,35 +136,35 @@ EXTRA_DEBS = {
     ]
     for arch in ARCHITECTURES
     for user in USERS
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro in DISTROS
 ]
 
 [
     container_test(
-        name = "java" + java_version + "_" + user + "_" + arch + distro_suffix + "_test",
-        configs = ["testdata/java" + java_version + distro_suffix + ".yaml"],
-        image = ":java" + java_version + "_" + user + "_" + arch + distro_suffix,
+        name = "java" + java_version + "_" + user + "_" + arch + "_" + distro + "_test",
+        configs = ["testdata/java" + java_version + "_" + distro + ".yaml"],
+        image = ":java" + java_version + "_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
             "manual",
         ],
     )
     for user in USERS
-    for (java_version, arch, distro_suffix) in VERSION_PAIRS
+    for (java_version, arch, distro) in VERSION_PAIRS
 ]
 
 [
     container_test(
-        name = "java" + java_version + "_debug_" + user + "_" + arch + distro_suffix + "_test",
-        configs = ["testdata/java" + java_version + "_debug" + distro_suffix + ".yaml"],
-        image = ":java" + java_version + "_debug_" + user + "_" + arch + distro_suffix,
+        name = "java" + java_version + "_debug_" + user + "_" + arch + "_" + distro + "_test",
+        configs = ["testdata/java" + java_version + "_debug" + "_" + distro + ".yaml"],
+        image = ":java" + java_version + "_debug_" + user + "_" + arch + "_" + distro,
         tags = [
             arch,
             "manual",
         ],
     )
     for user in USERS
-    for (java_version, arch, distro_suffix) in VERSION_PAIRS
+    for (java_version, arch, distro) in VERSION_PAIRS
 ]
 
 RULE_NAMES = [
