--- a/java/jetty/BUILD
+++ b/java/jetty/BUILD
@@ -1,6 +1,6 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//base:distro.bzl", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "DISTROS")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 
@@ -20,21 +20,21 @@ load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 ]]
 
 [container_test(
-    name = "jetty_java11" + distro_suffix + "_test",
+    name = "jetty_java11_" + distro + "_test",
     configs = ["testdata/java11.yaml"],
-    image = ":jetty_java11" + distro_suffix,
+    image = ":jetty_java11_" + distro,
     tags = [
         "amd64",
         "manual",
     ],
-) for distro_suffix in DISTRO_SUFFIXES]
+) for distro in DISTROS]
 
 [container_test(
-    name = "jetty_java11_debug" + distro_suffix + "_test",
+    name = "jetty_java11_debug_" + distro + "_test",
     configs = ["testdata/java11_debug.yaml"],
-    image = ":jetty_java11_debug" + distro_suffix,
+    image = ":jetty_java11_debug_" + distro,
     tags = [
         "amd64",
         "manual",
     ],
-) for distro_suffix in DISTRO_SUFFIXES]
+) for distro in DISTROS]
