--- a/nodejs/BUILD
+++ b/nodejs/BUILD
@@ -2,16 +2,16 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
-load("//base:distro.bzl", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "DISTROS")
 load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
 
 NODEJS_MAJOR_VERISONS = ("12", "14", "16")
 
 [
     container_image(
-        name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + distro_suffix,
+        name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro,
         architecture = arch,
-        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_root_" + arch + distro_suffix,
+        base = ("//cc:cc" if (not ("debug" in mode)) else "//cc:debug") + "_root_" + arch + "_" + distro,
         entrypoint = ["/nodejs/bin/node"],
         tars = ["@nodejs" + major_version + "_" + arch + "//:tar"],
     )
@@ -21,14 +21,14 @@ NODEJS_MAJOR_VERISONS = ("12", "14", "16")
     ]
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro in DISTROS
 ]
 
 [
     container_test(
-        name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + distro_suffix + "_test",
+        name = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro + "_test",
         configs = ["testdata/nodejs" + major_version + ".yaml"],
-        image = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + distro_suffix,
+        image = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro,
         tags = [
             arch,
             "manual",
@@ -40,7 +40,7 @@ NODEJS_MAJOR_VERISONS = ("12", "14", "16")
     ]
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro in DISTROS
 ]
 
 exports_files([
@@ -49,8 +49,8 @@ exports_files([
 
 [
     container_image(
-        name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + distro_suffix,
-        base = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + distro_suffix,
+        name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro,
+        base = "nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro,
         files = ["testdata/check_certificate.js"],
     )
     for mode in [
@@ -59,14 +59,14 @@ exports_files([
     ]
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro in DISTROS
 ]
 
 [
     container_test(
-        name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + distro_suffix + "_test",
+        name = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro + "_test",
         configs = ["testdata/check_certificate.yaml"],
-        image = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + distro_suffix,
+        image = "check_certificate_nodejs" + major_version + ("" if (not mode) else mode) + "_" + arch + "_" + distro,
         tags = [
             arch,
             "manual",
@@ -78,5 +78,5 @@ exports_files([
     ]
     for major_version in NODEJS_MAJOR_VERISONS
     for arch in ARCHITECTURES
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro in DISTROS
 ]
