--- a/cc/BUILD
+++ b/cc/BUILD
@@ -1,15 +1,15 @@
 package(default_visibility = ["//visibility:public"])
 
-load("//base:distro.bzl", "DISTRO_PACKAGES", "DISTRO_SUFFIXES")
+load("//base:distro.bzl", "DISTROS", "DISTRO_PACKAGES")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("//:checksums.bzl", "ARCHITECTURES")
 
 # distribution-specific deb dependencies
 DISTRO_DEBS = {
-    "_debian10": [
+    "debian10": [
         "libgcc1",
     ],
-    "_debian11": [
+    "debian11": [
         "libgcc-s1",
     ],
 }
@@ -17,13 +17,13 @@ DISTRO_DEBS = {
 # An image for C/C++ programs
 [
     container_image(
-        name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + distro_suffix,
+        name = ("cc" if (not mode) else mode[1:]) + "_" + user + "_" + arch + "_" + distro,
         architecture = arch,
-        base = "//base" + (mode if mode else ":base") + "_" + user + "_" + arch + distro_suffix,
+        base = "//base" + (mode if mode else ":base") + "_" + user + "_" + arch + "_" + distro,
         debs = [
-            DISTRO_PACKAGES[arch][distro_suffix]["libgomp1"],
-            DISTRO_PACKAGES[arch][distro_suffix]["libstdc++6"],
-        ] + [DISTRO_PACKAGES[arch][distro_suffix][deb] for deb in DISTRO_DEBS[distro_suffix]],
+            DISTRO_PACKAGES[arch][distro]["libgomp1"],
+            DISTRO_PACKAGES[arch][distro]["libstdc++6"],
+        ] + [DISTRO_PACKAGES[arch][distro][deb] for deb in DISTRO_DEBS[distro]],
     )
     for mode in [
         "",
@@ -34,5 +34,5 @@ DISTRO_DEBS = {
         "root",
         "nonroot",
     ]
-    for distro_suffix in DISTRO_SUFFIXES
+    for distro in DISTROS
 ]
