--- a/.github/workflows/ci-pkg-mgr.yaml
+++ b/.github/workflows/ci-pkg-mgr.yaml
@@ -8,28 +8,27 @@ on:
     branches: [ 'main' ]
 
 jobs:
-  # TODO this doesn't seem to work until post merge, so add it back in then
-  #build-and-test:
-    #name: CI
-    #runs-on: ubuntu-latest
+  build-and-test:
+    name: CI
+    runs-on: ubuntu-latest
 
-    #steps:
-    #- uses: actions/checkout@v2
-    #- uses: actions/setup-go@v2
-      #with:
-        #go-version: '1.16.0'
-    #- uses: actions/cache@v2
-      #with:
-        #path: |
-          #~/.cache/go-build
-          #~/go/pkg/mod
-        #key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        #restore-keys: |
-          #${{ runner.os }}-go-
-    #- name: Build, test
-      #run: |
-        #cd debian_package_manager
-        #make update generate test
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-go@v2
+      with:
+        go-version: '1.16.0'
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+    - name: Build, test
+      run: |
+        cd debian_package_manager
+        make update generate test
 
   golangci:
     name: lint
