add retries when fetching deps for ci, publish and update
Signed-off-by: Appu Goundan <appu@google.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,11 +24,11 @@ jobs:
     - name: Build and test
       run: |
         set -ex
-        bazel build --curses=no //package_manager:dpkg_parser.par
+        for i in $(seq 5); do bazel fetch --loading_phase_threads=1 //... && break || sleep 20; done
         bazel build --curses=no //...
         bazel test --curses=no --test_output=errors //...
         # Ignore experimental targets, which might not pass.
         # TODO: Fix or remove these exceptions.
-        targets=$(bazel query 'attr("tags", "'amd64'", "//...")' | grep -v experimental)
+        targets=$(bazel query 'attr("tags", "'amd64'", "//...")')
         bazel build --curses=no ${targets}
         bazel test --curses=no --test_output=errors ${targets}
