--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,6 +34,9 @@ steps:
     # Make sure python points to python3
     update-alternatives --install /usr/bin/python python /usr/bin/python3 0
 
+    # fetch all dependencies with retries and backoff
+    for i in $(seq 5); do bazel fetch --loading_phase_threads=1 //... && break || sleep 20; done
+
     bazel run //:publish
     bazel build all.tar
 
