--- a/.github/workflows/update-deb-package-snapshots.yml
+++ b/.github/workflows/update-deb-package-snapshots.yml
@@ -28,6 +28,7 @@ jobs:
       with:
         token: ${{ secrets.ACTIONS_TOKEN }}
         commit-message: "Bumping packages to latest stable versions"
+        author: "Distroless Bot <distroless-bot@google.com>"
         title: "Bumping packages to latest stable versions"
         body: "Bumping packages to latest stable versions"
         branch: "update-snapshots"
