--- a/nodejs/testdata/check_npm.yaml
+++ b/nodejs/testdata/check_npm.yaml
@@ -6,3 +6,12 @@ fileExistenceTests:
   - name: corepack
     path: '/nodejs/lib/node_modules/corepack'
     shouldExist: false
+  - name: npm
+    path: '/nodejs/bin/npm'
+    shouldExist: false
+  - name: corepack
+    path: '/nodejs/bin/corepack'
+    shouldExist: false
+  - name: npx
+    path: '/nodejs/bin/npx'
+    shouldExist: false
