--- a/.github/workflows/ci-pkg-mgr.yaml
+++ b/.github/workflows/ci-pkg-mgr.yaml
@@ -35,6 +35,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '1.16.0'
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3.1.0
         timeout-minutes: 5
