--- a/examples/nodejs/Dockerfile
+++ b/examples/nodejs/Dockerfile
@@ -2,7 +2,7 @@ FROM node:18 AS build-env
 COPY . /app
 WORKDIR /app
 
-RUN npm ci --only=production
+RUN npm ci --omit=dev
 
 FROM gcr.io/distroless/nodejs:18
 COPY --from=build-env /app /app
