--- a/examples/nodejs/node-express/Dockerfile
+++ b/examples/nodejs/node-express/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18 AS build-env
 ADD . /app
 WORKDIR /app
-RUN npm install --production
+RUN npm install --omit=dev
 
 FROM gcr.io/distroless/nodejs:18
 COPY --from=build-env /app /app
